--- a/templates/base.html
+++ b/templates/base.html
@@ -12,24 +12,30 @@
 </head>
 
 <body>
-
     <nav name=navbar class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item active">
                     <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
-                {% if "username" in session %}
+                {% if "email" in session %}
                 <li class="nav-item">
-                    <a class="nav-link" href="logout">Log out</a>
+
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/users/detail">User Profile</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/logout">Log Out</a>
                 </li>
                 {% else %}
                 <li class="nav-item">
-                    <a class="nav-link" href="login">Log In</a>
+                    <a class="nav-link" href="/login">Log In</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/users/create">Register</a>
                 </li>
                 {% endif %}
-
-
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">Dropdown link</a>
